[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/OlhoParado.png" type="Texture" id=1]
[ext_resource path="res://Scenes/ButtonIndicator/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=3]
[ext_resource path="res://Sprites/PlaceHolder.png" type="Texture" id=4]
[ext_resource path="res://Minecraftia-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/OlhoParadoInRange.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 11 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 7, 0 ), Vector2( 8, 0 ), Vector2( 9, 0 ), Vector2( 10, 0 ), Vector2( 11, 0 ), Vector2( 12, 0 ), Vector2( 13, 0 ), Vector2( 14, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=5]
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( 276.333, 100.333 )
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 2.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteProx:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 7, 0 ), Vector2( 8, 0 ), Vector2( 9, 0 ), Vector2( 10, 0 ), Vector2( 11, 0 ), Vector2( 12, 0 ), Vector2( 13, 0 ), Vector2( 14, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteProx:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 239, 52.3333 )
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 5 )

[node name="NPC" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
scale = Vector2( 1.25, 1 )
shape = SubResource( 1 )

[node name="Button" parent="." instance=ExtResource( 2 )]
position = Vector2( -1, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 6 )

[node name="AnimationPlayerProx" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="AnimationTreeProx" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayerProx")
active = true
parameters/playback = SubResource( 12 )

[node name="DialogueBox" type="Control" parent="."]
margin_left = -47.0
margin_top = -39.0
margin_right = 46.0
margin_bottom = -13.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueBox"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.99 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )
hframes = 15

[node name="SpriteProx" type="Sprite" parent="."]
position = Vector2( 0, 0.99 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )
hframes = 15

[connection signal="body_entered" from="." to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_body_exited"]
